--- a/src/app/pages/rule-book/components/auctions-property/player-value/player-value.component.html
+++ b/src/app/pages/rule-book/components/auctions-property/player-value/player-value.component.html
@@ -22,7 +22,7 @@
     <p>
       Il prezzo d’acquisto, che inizialmente corrisponde al valore, viene
       modificato, nel momento della rivalutazione, di una percentuale pari alla
-      variazione della quota fornita dal sito Fantacalcio.it.
+      variazione della quotazione fornita dal sito Fantacalcio.it.
     </p>
     <p>
       La rivalutazione ha luogo il giorno successivo all’ultima partita della
