--- a/src/app/pages/rule-book/components/auctions-property/property/property.component.html
+++ b/src/app/pages/rule-book/components/auctions-property/property/property.component.html
@@ -22,8 +22,8 @@
       </li>
     </ul>
     <p>
-      L’asta verrà condotta senza l’uso dei fantamilioni, bensì tramite la spesa
-      di soldi reali (<b>unica valuta ammessa: euro</b>).
+      L’asta verrà condotta senza l’uso dei fanta-milioni, bensì tramite la
+      spesa di soldi reali (<b>unica valuta ammessa: euro</b>).
     </p>
     <p>
       Non c’è dunque un tetto massimo per ogni squadra, ma i soldi investiti
@@ -65,7 +65,7 @@
       </ion-row>
     </ion-grid>
     <p>
-      Alla nascita di una nuova lega è possibile scegliere tra due possibilità:
+      Alla nascita di una nuova Lega è possibile scegliere tra due possibilità:
     </p>
     <ul>
       <li>
