--- a/src/app/pages/rule-book/components/auctions-property/refunds/refunds.component.html
+++ b/src/app/pages/rule-book/components/auctions-property/refunds/refunds.component.html
@@ -28,7 +28,7 @@
     <p>
       Per un giocatore venduto a gennaio (nel mercato “reale”) e comprato nel
       mercato svincolati <b>dopo il 15 novembre</b> verranno restituiti il
-      <b>75%</b>dei soldi spesi.
+      <b>75%</b> dei soldi spesi.
     </p>
     <p>
       Se un giocatore lascia la Serie A <b>dopo il 28 febbraio</b>, non riceverà
@@ -58,8 +58,8 @@
     <p>
       <b>Esempio:</b> Decido di rinnovare un giocatore i primi giorni di agosto
       spendendo X e successivamente di venderlo ad un altro presidente per la
-      cifra Y. Se, dopo la compra-vendita tra i partecipanti della fanta-Lega,
-      il giocatore reale viene venduto (all’estero o in Serie B), viene resa al
+      cifra Y. Se, dopo la compra-vendita tra i partecipanti della Lega, il
+      giocatore reale viene venduto (all’estero o in Serie B), viene resa al
       nuovo proprietario la cifra X.
     </p>
     <p>
