--- a/src/app/pages/rule-book/components/fair-play/fair-play.component.html
+++ b/src/app/pages/rule-book/components/fair-play/fair-play.component.html
@@ -20,7 +20,7 @@
     </p>
     <p>
       Sono severamente vietate le transazioni di denaro fra fantallenatori al di
-      fuori dei contratti depositati in lega.
+      fuori dei contratti depositati in Lega.
     </p>
     <p>
       Viene calcolata e ufficializzata una giornata di fantacalcio solo nel caso
@@ -33,7 +33,7 @@
       Il presidente di ogni squadra è tenuto dichiarare la propria
       partecipazione per la stagione successiva entro le due settimane seguenti
       la fine del campionato corrente, qualora un presidente partecipante decida
-      di lasciare la lega in un secondo momento (dopo aver dato quindi la
+      di lasciare la Lega in un secondo momento (dopo aver dato quindi la
       conferma), non avrà possibilità di eseguire trattative sul mercato e nel
       caso ne abbia già eseguite sono considerate nulle.
     </p>
