--- a/src/app/pages/rule-book/components/transfers/clause/clause.component.html
+++ b/src/app/pages/rule-book/components/transfers/clause/clause.component.html
@@ -26,14 +26,14 @@
         Le clausole rescissorie possono essere applicate alle trattative di
         prestito per annullarlo durante la stagione al seguito di un evento.
         Possono essere di due tipi: quelle che vengono attivate da eventi extra
-        lega e quelle che invece vengono attivate da scelte o situazioni intra
-        lega. La differenza tra le due è che le prime possono annullare la
+        Lega e quelle che invece vengono attivate da scelte o situazioni intra
+        Lega. La differenza tra le due è che le prime possono annullare la
         trattativa durante ogni finestra di mercato del martedì mentre le
         seconde solo durante le apposite finestre di mercato tra fantallenatori.
       </li>
       <li>
         Le clausole di modifica possono modificare una trattativa a seguito di
-        un evento sia intra che extra lega. Possono essere cambiate le cifre dei
+        un evento sia intra che extra Lega. Possono essere cambiate le cifre dei
         bonus, la tipologia dei bonus, altre clausole… ma non possono essere
         modificate le caratteristiche intrinseche della trattativa; un prestito
         non può diventare una cessione a titolo definitivo e viceversa.
@@ -55,11 +55,11 @@
       dei giocatori.
     </p>
     <p>
-      <b>Eventi extra lega:</b> infortuni, compra vendita nel mercato reale,
+      <b>Eventi extra Lega:</b> infortuni, compra vendita nel mercato reale,
       raggiungimento di una cifra di gol/assist/presenze, etc.
     </p>
     <p>
-      <b>Eventi intra lega:</b> scelta di un fantallenatore, posizione in
+      <b>Eventi intra Lega:</b> scelta di un fantallenatore, posizione in
       classifica in campionato, posizione in coppa etc.
     </p>
     <p>
@@ -87,7 +87,7 @@
       considerato come una trattativa.
     </p>
     <p>
-      <b>Attenzione:</b>per la seconda casistica possono essere annullate solo
+      <b>Attenzione:</b> per la seconda casistica possono essere annullate solo
       le trattative o le parti di esse che sono continuative nel futuro
       prossimo; possono essere annullati bonus, clausole che ancora non si sono
       attivate, prestiti, etc… ma non si possono annullare trattative a titolo
