--- a/src/app/pages/tool-ex/tool-exchange/tool-exchange.page.html
+++ b/src/app/pages/tool-ex/tool-exchange/tool-exchange.page.html
@@ -5,6 +5,7 @@
 </ion-header>
 <ion-content [fullscreen]="true">
   <ion-row>
+    <ion-button routerLink="home">Home</ion-button>
     <ion-button routerLink="/select-teams">Cambia squadre</ion-button>
   </ion-row>
   <ion-card class="container">
