--- a/src/app/pages/balance/balance.page.scss
+++ b/src/app/pages/balance/balance.page.scss
@@ -11,3 +11,21 @@
     }
   }
 }
+
+.separator {
+  height: 1px;
+  background-color: white;
+  width: 100%;
+  margin: auto;
+}
+
+.positiveValue {
+  color: lightgreen;
+  font-size: 1rem;
+  font-weight: bold;
+}
+.negativeValue {
+  color: red;
+  font-size: 1rem;
+  font-weight: bold;
+}
