--- a/src/global.scss
+++ b/src/global.scss
@@ -71,3 +71,29 @@ td.mat-cell:last-of-type {
 .mat-selected .mat-option-text {
   color: white !important;
 }
+
+//style tool exchange
+.tool-card {
+  margin: 0;
+  .mat-tab-label {
+    padding: 0 !important;
+  }
+  .mat-tab-label-active,
+  .mat-tab-list {
+    background-color: #fff !important;
+  }
+
+  .tool-teams {
+    margin: 0;
+    ion-grid {
+      padding: 0;
+      th.mat-header-cell:first-of-type,
+      td.mat-cell:first-of-type,
+      th.mat-header-cell:last-of-type,
+      td.mat-cell:last-of-type {
+        padding-left: 0.3rem !important;
+        padding-right: 0.3rem !important;
+      }
+    }
+  }
+}
