--- a/src/app/pages/tool-ex/tool-exchange/tool-exchange.page.html
+++ b/src/app/pages/tool-ex/tool-exchange/tool-exchange.page.html
@@ -11,15 +11,17 @@
   <ion-card class="container">
     <mat-tab-group>
       <mat-tab label="{{firstTeamName}}">
+        <!--
         <div *ngIf="firstTeam.length != 0" style="margin-top: 20px">
           <b>Valori Iniziali</b>
-        </div>
+        </div>-->
         <table
           #firstTeamTable
           mat-table
           [ngClass]="{'tableHidden': firstTeam.length == 0}"
           [dataSource]="firstTeam"
           class="mat-elevation-z8"
+          style="margin-top: 0"
         >
           <ng-container matColumnDef="position">
             <th mat-header-cell *matHeaderCellDef>Nome</th>
@@ -71,10 +73,9 @@
             >Aggiungi giocatore</ion-button
           >
         </ion-row>
-
-        <div *ngIf="firstTeam.length != 0" style="margin-top: 1em">
+        <!--   <div *ngIf="firstTeam.length != 0" style="margin-top: 1em">
           <b>Valori Finali</b>
-        </div>
+        </div>-->
 
         <table
           [ngClass]="{'tableHidden': firstTeam.length == 0}"
@@ -82,6 +83,7 @@
           mat-table
           [dataSource]="firstTeamValues"
           class="mat-elevation-z8 final"
+          style="margin-bottom: 0"
         >
           <ng-container matColumnDef="position">
             <th mat-header-cell *matHeaderCellDef>Nome</th>
@@ -95,20 +97,38 @@
             </td>
           </ng-container>
 
+          <ng-container matColumnDef="trend">
+            <th mat-header-cell *matHeaderCellDef></th>
+            <td mat-cell *matCellDef="let element">
+              <ion-icon
+                style="font-size: 2rem; color: lightgreen"
+                *ngIf="element.value !== element.finalValue"
+                name="caret-up-outline"
+              ></ion-icon>
+              <ion-icon
+                style="font-size: 2rem; color: white"
+                *ngIf="element.value === element.finalValue"
+                name="caret-forward-outline"
+              ></ion-icon>
+            </td>
+          </ng-container>
+
           <tr mat-header-row *matHeaderRowDef="finalFirstTeamCols"></tr>
           <tr mat-row *matRowDef="let row; columns: finalFirstTeamCols;"></tr>
         </table>
       </mat-tab>
       <mat-tab label="{{secondTeamName}}">
+        <!--
         <div *ngIf="secondTeam.length != 0" style="margin-top: 20px">
           <b>Valori Iniziali</b>
-        </div>
+        </div>-->
         <table
           [ngClass]="{'tableHidden': secondTeam.length == 0}"
           #secondTeamTable
           mat-table
           [dataSource]="secondTeam"
           class="mat-elevation-z8"
+          style="margin-top: 0"
         >
           <ng-container matColumnDef="position">
             <th mat-header-cell *matHeaderCellDef>Nome</th>
@@ -161,9 +181,9 @@
           >
         </ion-row>
 
-        <div *ngIf="secondTeam.length != 0" style="margin-top: 1em">
+        <!--     <div *ngIf="secondTeam.length != 0" style="margin-top: 1em">
           <b>Valori Finali</b>
-        </div>
+        </div>-->
 
         <table
           [ngClass]="{'tableHidden': secondTeam.length == 0}"
@@ -171,6 +191,7 @@
           mat-table
           [dataSource]="secondTeamValues"
           class="mat-elevation-z8 final"
+          style="margin-bottom: 0"
         >
           <ng-container matColumnDef="position">
             <th mat-header-cell *matHeaderCellDef>Nome</th>
@@ -181,6 +202,22 @@
             <th mat-header-cell *matHeaderCellDef>Valore Finale</th>
             <td mat-cell *matCellDef="let element">
               {{element.finalValue | roundPipe}}
+            </td>
+          </ng-container>
+
+          <ng-container matColumnDef="trend">
+            <th mat-header-cell *matHeaderCellDef></th>
+            <td mat-cell *matCellDef="let element">
+              <ion-icon
+                style="font-size: 2rem; color: lightgreen"
+                *ngIf="element.value !== element.finalValue"
+                name="caret-up-outline"
+              ></ion-icon>
+              <ion-icon
+                style="font-size: 2rem; color: white"
+                *ngIf="element.value === element.finalValue"
+                name="caret-forward-outline"
+              ></ion-icon>
             </td>
           </ng-container>
 
