--- a/src/app/pages/tool-ex/tool-exchange/tool-exchange.page.html
+++ b/src/app/pages/tool-ex/tool-exchange/tool-exchange.page.html
@@ -14,8 +14,8 @@
 </ion-header>
 <ion-content [fullscreen]="true">
   <ion-card class="container">
-    <mat-tab-group>
-      <mat-tab label="{{firstTeamName}}">
+    <mat-tab-group mat-stretch-tabs>
+      <mat-tab label="{{firstTeamName | cutLongName}}">
         <!--
         <div *ngIf="firstTeam.length != 0" style="margin-top: 20px">
           <b>Valori Iniziali</b>
@@ -38,18 +38,33 @@
           class="mat-elevation-z8"
           style="margin-top: 0"
         >
-          <ng-container matColumnDef="position">
+          <ng-container matColumnDef="role">
+            <th mat-header-cell *matHeaderCellDef></th>
+            <td mat-cell *matCellDef="let element">
+              <b
+                [ngStyle]="{'background-color': computeRoleColor(element.role)}"
+                class="role"
+                >{{element.role}}</b
+              >
+            </td>
+          </ng-container>
+
+          <ng-container matColumnDef="name">
             <th mat-header-cell *matHeaderCellDef>Nome</th>
-            <td mat-cell *matCellDef="let element">{{element.name}}</td>
+            <td mat-cell *matCellDef="let element">
+              {{element.name | formatName}}
+            </td>
           </ng-container>
 
           <ng-container matColumnDef="value">
-            <th mat-header-cell *matHeaderCellDef>Valore</th>
-            <td mat-cell *matCellDef="let element">{{element.value}}</td>
+            <th mat-header-cell *matHeaderCellDef>Val.</th>
+            <td mat-cell *matCellDef="let element">
+              {{element.value | currency:'EUR'}}
+            </td>
           </ng-container>
 
           <ng-container matColumnDef="contract">
-            <th mat-header-cell *matHeaderCellDef>Contratto</th>
+            <th mat-header-cell *matHeaderCellDef>Contr.</th>
             <td mat-cell *matCellDef="let element">
               {{element.contractType | contractTypeMap}}
             </td>
@@ -97,15 +112,27 @@
           class="mat-elevation-z8 final"
           style="margin-bottom: 0"
         >
-          <ng-container matColumnDef="position">
+          <ng-container matColumnDef="role">
+            <th mat-header-cell *matHeaderCellDef></th>
+            <td mat-cell *matCellDef="let element">
+              <b
+                [ngStyle]="{'background-color': computeRoleColor(element.role)}"
+                class="role"
+                >{{element.role}}</b
+              >
+            </td>
+          </ng-container>
+          <ng-container matColumnDef="name">
             <th mat-header-cell *matHeaderCellDef>Nome</th>
-            <td mat-cell *matCellDef="let element">{{element.name}}</td>
+            <td mat-cell *matCellDef="let element">
+              {{element.name | formatName}}
+            </td>
           </ng-container>
 
           <ng-container matColumnDef="value">
-            <th mat-header-cell *matHeaderCellDef>Valore Finale</th>
+            <th mat-header-cell *matHeaderCellDef>Val. Finale</th>
             <td mat-cell *matCellDef="let element">
-              {{element.finalValue | roundPipe}}
+              {{element.finalValue | roundPipe | currency:'EUR'}}
             </td>
           </ng-container>
 
@@ -129,7 +156,7 @@
           <tr mat-row *matRowDef="let row; columns: finalFirstTeamCols;"></tr>
         </table>
       </mat-tab>
-      <mat-tab label="{{secondTeamName}}">
+      <mat-tab label="{{secondTeamName | cutLongName}}">
         <!--
         <div *ngIf="secondTeam.length != 0" style="margin-top: 20px">
           <b>Valori Iniziali</b>
@@ -152,18 +179,32 @@
           class="mat-elevation-z8"
           style="margin-top: 0"
         >
-          <ng-container matColumnDef="position">
+          <ng-container matColumnDef="role">
+            <th mat-header-cell *matHeaderCellDef></th>
+            <td mat-cell *matCellDef="let element">
+              <b
+                [ngStyle]="{'background-color': computeRoleColor(element.role)}"
+                class="role"
+                >{{element.role}}</b
+              >
+            </td>
+          </ng-container>
+          <ng-container matColumnDef="name">
             <th mat-header-cell *matHeaderCellDef>Nome</th>
-            <td mat-cell *matCellDef="let element">{{element.name}}</td>
+            <td mat-cell *matCellDef="let element">
+              {{element.name | formatName}}
+            </td>
           </ng-container>
 
           <ng-container matColumnDef="value">
-            <th mat-header-cell *matHeaderCellDef>Valore</th>
-            <td mat-cell *matCellDef="let element">{{element.value}}</td>
+            <th mat-header-cell *matHeaderCellDef>Val.</th>
+            <td mat-cell *matCellDef="let element">
+              {{element.value | currency:'EUR'}}
+            </td>
           </ng-container>
 
           <ng-container matColumnDef="contract">
-            <th mat-header-cell *matHeaderCellDef>Contratto</th>
+            <th mat-header-cell *matHeaderCellDef>Contr.</th>
             <td mat-cell *matCellDef="let element">
               {{element.contractType | contractTypeMap}}
             </td>
@@ -211,15 +252,27 @@
           class="mat-elevation-z8 final"
           style="margin-bottom: 0"
         >
-          <ng-container matColumnDef="position">
+          <ng-container matColumnDef="role">
+            <th mat-header-cell *matHeaderCellDef></th>
+            <td mat-cell *matCellDef="let element">
+              <b
+                [ngStyle]="{'background-color': computeRoleColor(element.role)}"
+                class="role"
+                >{{element.role}}</b
+              >
+            </td>
+          </ng-container>
+          <ng-container matColumnDef="name">
             <th mat-header-cell *matHeaderCellDef>Nome</th>
-            <td mat-cell *matCellDef="let element">{{element.name}}</td>
+            <td mat-cell *matCellDef="let element">
+              {{element.name | formatName}}
+            </td>
           </ng-container>
 
           <ng-container matColumnDef="value">
-            <th mat-header-cell *matHeaderCellDef>Valore Finale</th>
+            <th mat-header-cell *matHeaderCellDef>Val. Finale</th>
             <td mat-cell *matCellDef="let element">
-              {{element.finalValue | roundPipe}}
+              {{element.finalValue | roundPipe | currency:'EUR'}}
             </td>
           </ng-container>
 
@@ -251,7 +304,7 @@
           </ng-container>
 
           <ng-container matColumnDef="value">
-            <th mat-header-cell *matHeaderCellDef> Valore </th>
+            <th mat-header-cell *matHeaderCellDef> Val. </th>
             <td mat-cell *matCellDef="let element"> {{element.value}} </td>
           </ng-container>
 
