--- a/src/app/pages/tool-ex/tool-exchange/tool-exchange.page.scss
+++ b/src/app/pages/tool-ex/tool-exchange/tool-exchange.page.scss
@@ -14,8 +14,17 @@
   text-align: center;
   background-color: #424242;
   color: white;
+  min-height: 100%;
+  min-height: -moz-available; /* WebKit-based browsers will ignore this. */
+  min-height: -webkit-fill-available; /* Mozilla-based browsers will ignore this. */
+  min-height: fill-available;
   .mat-table {
     background-color: #303030;
+    .role {
+      color: #fff;
+      border-radius: 50%;
+      padding: 5px 9px;
+    }
   }
   strong {
     font-size: 20px;
