--- a/src/app/pages/tool-ex/tool-exchange/tool-exchange.page.html
+++ b/src/app/pages/tool-ex/tool-exchange/tool-exchange.page.html
@@ -25,7 +25,7 @@
           <input (change)="setFirstExtra()" [(ngModel)]="extra1" matInput />
         </mat-form-field>
         <ion-row>
-          <ion-button routerLink="team/{{firstTeamId}}/player/1"
+          <ion-button routerLink="team/{{firstTeamId}}/1"
             >Aggiungi giocatore</ion-button
           >
         </ion-row>
@@ -166,7 +166,7 @@
           <input (change)="setSecondExtra()" [(ngModel)]="extra2" matInput />
         </mat-form-field>
         <ion-row>
-          <ion-button routerLink="team/{{secondTeamId}}/player/2"
+          <ion-button routerLink="team/{{secondTeamId}}/2"
             >Aggiungi giocatore</ion-button
           >
         </ion-row>
