--- a/src/app/pages/team/team.page.html
+++ b/src/app/pages/team/team.page.html
@@ -57,6 +57,7 @@
 
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
     <tr
+      [ngStyle]="{'background-color': row.youthFlag ? 'rgb(100, 100, 100)' : 'inherit'}"
       (click)="navigateToPlayer(row.playerId)"
       mat-row
       *matRowDef="let row; columns: displayedColumns;"
