--- a/src/app/pages/free/free.page.html
+++ b/src/app/pages/free/free.page.html
@@ -49,6 +49,18 @@
     <!--- Note that these columns can be defined in any order.
         The actual rendered columns are set as a property on the row definition" -->
 
+    <ng-container matColumnDef="img">
+      <th mat-header-cell *matHeaderCellDef></th>
+      <td mat-cell *matCellDef="let element">
+        <div
+          style="width: fit-content"
+          [ngStyle]="{'background-color': computeRoleColor(element.role)}"
+        >
+          <img src="{{element.img}}" alt="" />
+        </div>
+      </td>
+    </ng-container>
+
     <ng-container matColumnDef="role">
       <th mat-header-cell *matHeaderCellDef>Ruolo</th>
       <td mat-cell *matCellDef="let element">
