--- a/src/app/pages/renewal/renewal.page.html
+++ b/src/app/pages/renewal/renewal.page.html
@@ -37,6 +37,18 @@
       </td>
     </ng-container>
 
+    <ng-container matColumnDef="img">
+      <th mat-header-cell *matHeaderCellDef></th>
+      <td mat-cell *matCellDef="let element">
+        <div
+          style="width: fit-content"
+          [ngStyle]="{'background-color': computeRoleColor(element.role)}"
+        >
+          <img src="{{element.img}}" alt="" />
+        </div>
+      </td>
+    </ng-container>
+
     <ng-container matColumnDef="role">
       <th style="text-align: center" mat-header-cell *matHeaderCellDef>R</th>
       <td mat-cell *matCellDef="let element">
