--- a/src/app/pages/team/team.page.html
+++ b/src/app/pages/team/team.page.html
@@ -18,6 +18,18 @@
     <!--- Note that these columns can be defined in any order.
         The actual rendered columns are set as a property on the row definition" -->
 
+    <ng-container matColumnDef="img">
+      <th mat-header-cell *matHeaderCellDef></th>
+      <td mat-cell *matCellDef="let element">
+        <div
+          style="width: fit-content"
+          [ngStyle]="{'background-color': computeRoleColor(element.role)}"
+        >
+          <img src="{{element.img}}" alt="" />
+        </div>
+      </td>
+    </ng-container>
+
     <ng-container matColumnDef="role">
       <th mat-header-cell *matHeaderCellDef>Ruolo</th>
       <td mat-cell *matCellDef="let element">
@@ -31,7 +43,9 @@
 
     <ng-container matColumnDef="name">
       <th mat-header-cell *matHeaderCellDef>Nome</th>
-      <td mat-cell *matCellDef="let element">{{element.name | formatName}}</td>
+      <td mat-cell *matCellDef="let element">
+        <span>{{element.name | formatName}}</span>
+      </td>
     </ng-container>
 
     <ng-container matColumnDef="team">
