--- a/src/app/pages/team/team.page.scss
+++ b/src/app/pages/team/team.page.scss
@@ -1,6 +1,11 @@
 table {
   width: 100%;
 
+  img {
+    border-radius: 100%;
+    height: 50px;
+  }
+
   .role {
     color: #fff;
     border-radius: 50%;
